# cmndseven-cli

./: LICENSE  Makefile  README.md  cmndseven_cli.py  contributors.md  example.html  flake.nix  pyproject.toml  skeleton.html
.github/workflows/: build.yml  test.yml
cmndseven_cli/: __init__.py
cmndseven_cli/assets/: bpmn-viewer.js  bpmn-viewer.production.min.js  index.js  instance.html  package-lock.json  package.json  puppeteer.js  puppeteer.production.min.js  rollup.config.mjs  skeleton.html  webpack.config.cjs
