[tool.poetry]
name = "cmndseven-cli"
version = "0.2.1"
description = "Opinionated Camunda Platform 7 CLI"
homepage = "https://github.com/datakurre/cmndseven-cli/"
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "cmndseven_cli" }
]
exclude = [
  "cmndseven_cli/assets/*.cjs",
  "cmndseven_cli/assets/*.cjs",
  "cmndseven_cli/assets/*.json",
  "cmndseven_cli/assets/*.mjs",
  "cmndseven_cli/assets/bpmn-viewer.js",
  "cmndseven_cli/assets/node_modules",
  "cmndseven_cli/assets/puppeteer.js"
]

[tool.poetry.scripts]
ccli = "cmndseven_cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
generic-camunda-client = "^7.18.0"
chameleon = "^3.10.2"
setuptools = "^66.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
twine = "^4.0.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
